// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination/>  render the Pagination without data 1`] = `
<nav
  className="nav-pills"
>
  <ul
    className="pagination"
  />
</nav>
`;

exports[`<Pagination/> render Pagination with data 1`] = `
<nav
  className="nav-pills"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item
                    active"
    >
      <a
        className="page-link"
        href="!#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="page-item
                    "
    >
      <a
        className="page-link"
        href="!#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
  </ul>
</nav>
`;
